--- a/inc/phpFileTree/styles/default/default.css
+++ b/inc/phpFileTree/styles/default/default.css
@@ -31,6 +31,7 @@
 		list-style-image: url(images/directory.png);
 	}
 	
+	.php-file-tree LI.pft { list-style-image: url(images/picture.png); }
 	/* Default file */
 	.php-file-tree LI.pft-file { list-style-image: url(images/file.png); }
 	/* Additional file types */
